hw06/test/zm-this-in-main.fmj
public int main() {
    this.i1 = 0;  // error
    return 0;
}
